# rust-qemu-disco

./: Cargo.toml  memory.x  openocd_release.gdb  qemu.gdb  qemu_gdb.sh  qemu_release.gdb
.cargo/: config
examples/: blink.rs  color_rotate.rs  context_switch.rs  exception.rs  hello.rs  test_fail.rs
src/: main.rs
