[package]
authors = ["Daan de Graaf"]
name = "rust-qemu-disco"
version = "0.1.0"

[dependencies]
cortex-m = "0.5.7"
cortex-m-rt = "0.6.3"
cortex-m-semihosting = "0.3.1"
panic-halt = "0.2.0"
panic-semihosting = { version = "0.5.1", features = ["exit"] }

[dependencies.stm32f4]
version = "0.3.2"
features = ["stm32f407"]

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

